# kicad-claude-toolkit

./: .gitattributes  CLAUDE.md  README.md  bom-intelligence.skill  circuit-toolkit.skill  component-selection.skill  design-for-test.skill  design-patterns.skill  firmware-scaffold.skill  hardware-bringup.skill  kicad-expert.skill  mechanical-constraints.skill  pcb-design-best-practices.skill  pcb-workflow.skill  power-thermal.skill  preflight-audit.skill  revision-management.skill  schematic-hygiene.skill  symbol-footprint-sourcing.skill  version-control.skill
_skill_src/circuit-toolkit/: SKILL.md
bridge/: kicad_bridge.py
python/circuit_toolkit/: README.md  pyproject.toml
python/circuit_toolkit/circuit_toolkit/: __init__.py
python/circuit_toolkit/circuit_toolkit/blocks/: __init__.py  charger.py  decoupling.py  header.py  ldo.py  led.py  mounting.py  scope.py  usbc.py
python/circuit_toolkit/circuit_toolkit/builders/: __init__.py  datasheet.py  extract_layout.py  pcb.py  pcbdraw.py  render.py  schematic.py  schematic_hierarchical.py
python/circuit_toolkit/circuit_toolkit/core/: __init__.py  board.py  component.py  net.py
python/circuit_toolkit/circuit_toolkit/fab/: __init__.py  bom.py
python/circuit_toolkit/circuit_toolkit/sim/: __init__.py  netlist.py  properties.py  runner.py  theme.py
python/circuit_toolkit/circuit_toolkit/sim/backends/: __init__.py  base.py  ngspice.py
python/circuit_toolkit/circuit_toolkit/sim/models/: ams1117.lib
