[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit_toolkit"
version = "0.1.0"
description = "Headless circuit description and KiCad PCB generation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nick Sapiro" },
]
dependencies = [
    "skidl>=2.2.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
sim = ["PySpice"]      # for v2 SPICE simulation
docs = ["weasyprint"]  # for v2 datasheet PDF generation

[tool.setuptools.packages.find]
where = ["."]
include = ["circuit_toolkit*"]

[tool.setuptools.package-data]
circuit_toolkit = ["py.typed"]
