[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit_toolkit"
version = "0.1.0"
description = "Headless circuit description and KiCad PCB generation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nick Sapiro" },
]
dependencies = [
    "skidl>=2.2.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
# v2 SPICE pre-flight — needs only matplotlib for plots and numpy for the
# raw-file parser. The simulator itself is invoked via subprocess
# (``ngspice -b``) so there is no Python binding pinned to a specific
# ngspice version. Install ngspice separately:
#   - apt: `sudo apt install ngspice`
#   - Windows: extract ngspice-XX_64.7z, ensure ngspice_con.exe is on PATH or
#     under %LOCALAPPDATA%\Spice64\bin\
sim = ["matplotlib", "numpy"]
docs = [
    "reportlab>=4.0", "svglib>=1.5", "pillow",    # v2 datasheet PDF generation
    "pcbdraw>=1.2",                                # v3 stylized 2D PCB views
    "LnkParse3",                                   # transitive dep (Windows .lnk parsing)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["circuit_toolkit*"]

[tool.setuptools.package-data]
circuit_toolkit = ["py.typed"]
